# omeganexus

./: .env.example  .gitignore  BENCHMARK.md  Cargo.toml  DASHBOARD_FEATURES.md  DEPLOYMENT.md  Dockerfile  GODMODE.md  IMPROVEMENTS.md  NEW_FEATURES_v18.md  PREMIUM_PROXY_HUNTING.md  README.md  SMART_SOURCE_MANAGEMENT.md  V17_IMPLEMENTATION.md  add_fresh_sources.sh  deploy.sh  docker-compose.yml  fresh_sources_2025.sql  omega9-nexus.service  test-proxies.sh  test_browsing_capability.sh  test_hunt.sh  test_premium_proxies.sh  v17_IMPLEMENTATION_COMPLETE.md
migrations/: 001_init.sql  002_enhanced_validation.sql  003_predictive_scoring.sql
src/: ai.rs  asn_detector.rs  crawler.rs  discovery.rs  main.rs  sources.rs  validator.rs
static/: index.html  premium.html
