[package]
name = "omega9-nexus"
version = "15.0.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
reqwest = { version = "0.12.5", features = ["json", "socks"] }
tokio-tungstenite = "0.24.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
rand = "0.8.5"
scraper = "0.20.0"
urlencoding = "2.1.3"
ndarray = "0.16.1"
sysinfo = "0.32"
anyhow = "1.0"
tokio-retry = "0.3"
fake-useragent = "0.1.3"
regex = "1.10"
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
strip = true
